noinst_LIBRARIES = libHyParFunctions.a
libHyParFunctions_a_SOURCES = \
  ApplyBoundaryConditions.c \
  BoundaryIntegral.c \
  CalculateError.c \
  CalculateConservationError.c \
  ExactSolution.c \
  HyperbolicFunction.c \
  IncrementFilename.c \
  NonLinearInterpolation.c \
  SourceFunction.c \
  VolumeIntegral.c
