noinst_LIBRARIES = libSimulation.a
libSimulation_a_SOURCES = \
  Cleanup.c \
	EnsembleSimulationsDefine.cpp \
  Initialize.c \
  InitializeBoundaries.c \
  InitializePhysics.c \
  InitializePhysicsData.c \
  InitializeSolvers.c \
  InitialSolution.c \
  OutputSolution.cpp \
  ReadInputs.c \
  SimulationWriteErrors.c \
	SingleSimulationDefine.cpp \
  Solve.cpp \
  WriteInputs.c
